--- a/授权服务器租户端对接文档.md
+++ b/授权服务器租户端对接文档.md
@@ -1,6 +1,7 @@
 ## 授权服务器租户端对接文档
 
-> 锐狐授权服务器是完全基于国产化上层框架的多租户一体化授权服务器。项目基于二级链路的三方授权和自动巡向的租户扩展，同时支持`授权校验页SSR`
+>
+fox国产化授权服务器是完全基于国产化上层框架的多租户一体化授权服务器。项目基于二级链路的三方授权和自动巡向的租户扩展，同时支持`授权校验页SSR`
 
 项目目前优先支持`授权码模式`和`简化授权码模式`，这是Oauth2协议中高频使用的两个模式。
 
@@ -10,32 +11,32 @@
 
 #### 1.1.1 信息登记
 
-1.寻找`锐狐授权服务器管理员`，在管理员处申请授权服务器的使用资格，你需要提供：
+1.寻找`fox国产化授权服务器管理员`，在管理员处申请授权服务器的使用资格，你需要提供：
 
-| 字段名              | 字段                  | 备注                                                     |
-| ------------------- | --------------------- | -------------------------------------------------------- |
-| 租户端系统识别码    | client_id             | 选填，不填则为系统首拼                                   |
-| 租户端密码          | client_secret         | 选填，不填则为随机乱码                                   |
-| 租户端图标          | client_icon           | 选填，不填则为默认图标                                   |
-| 授权范围            | contract_scope        | 选填，不填则为all                                        |
-| 可选重定向地址      | allow_url             | 必填，多个请用半角逗号隔开                               |
-| 开启授权码模式      | is_code               | 必填，0否1是                                             |
-| 开启简化授权码模式  | is_implicit           | 必填，0否1是                                             |
-| 开启密码模式        | is_password           | 必填，0否1是                                             |
-| 开启客户端模式      | is_client             | 必填，0否1是                                             |
-| 开启静默授权        | is_auto_mode          | 必填，0否1是，单次登录状态首次授权后，之后的授权不再询问 |
-| 是否开启刷新token   | is_new_fresh          | 必填，0否1是                                             |
-| token存续时长       | access_token_timeout  | 必填，token过期时长                                      |
-| 刷新token存续时长   | refresh_token_timeout | 必填，刷新token过期时长                                  |
-| 客户端token存续时长 | client_token_timeout  | 必填，客户端token过期时长                                |
+| 字段名          | 字段                    | 备注                            |
+|--------------|-----------------------|-------------------------------|
+| 租户端系统识别码     | client_id             | 选填，不填则为系统首拼                   |
+| 租户端密码        | client_secret         | 选填，不填则为随机乱码                   |
+| 租户端图标        | client_icon           | 选填，不填则为默认图标                   |
+| 授权范围         | contract_scope        | 选填，不填则为all                    |
+| 可选重定向地址      | allow_url             | 必填，多个请用半角逗号隔开                 |
+| 开启授权码模式      | is_code               | 必填，0否1是                       |
+| 开启简化授权码模式    | is_implicit           | 必填，0否1是                       |
+| 开启密码模式       | is_password           | 必填，0否1是                       |
+| 开启客户端模式      | is_client             | 必填，0否1是                       |
+| 开启静默授权       | is_auto_mode          | 必填，0否1是，单次登录状态首次授权后，之后的授权不再询问 |
+| 是否开启刷新token  | is_new_fresh          | 必填，0否1是                       |
+| token存续时长    | access_token_timeout  | 必填，token过期时长                  |
+| 刷新token存续时长  | refresh_token_timeout | 必填，刷新token过期时长                |
+| 客户端token存续时长 | client_token_timeout  | 必填，客户端token过期时长               |
 
 2.你将收到回执如下：
 
-| 字段名           | 字段          |
-| ---------------- | ------------- |
+| 字段名      | 字段            |
+|----------|---------------|
 | 租户端系统识别码 | client_id     |
-| 租户系统编号     | id            |
-| 租户端系统密码   | client_secret |
+| 租户系统编号   | id            |
+| 租户端系统密码  | client_secret |
 
 #### 1.1.2 三方授权接入登记
 
@@ -43,13 +44,13 @@
 
 下边以**企业微信**为例，你需要提供：
 
-| 字段名                     | 字段        | 备注                       |
-| -------------------------- | ----------- | -------------------------- |
-| 三方授权渠道               | channel     | 必填，比如企微、QQ、飞书等 |
-| 租户端系统编号             | client_id   | 必填，对应上述返回的id     |
-| 三方授权系统给的corpid     | corp_id     |                            |
-| 三方授权系统给的corpsecret | corp_secret |                            |
-| 三方授权系统给的app编号    | appid       |                            |
+| 字段名                | 字段          | 备注             |
+|--------------------|-------------|----------------|
+| 三方授权渠道             | channel     | 必填，比如企微、QQ、飞书等 |
+| 租户端系统编号            | client_id   | 必填，对应上述返回的id   |
+| 三方授权系统给的corpid     | corp_id     |                |
+| 三方授权系统给的corpsecret | corp_secret |                |
+| 三方授权系统给的app编号      | appid       |                |
 
 > 授权信息登记完毕以后，进入`代码编写`阶段
 >
@@ -68,7 +69,7 @@
 ```yaml
 oauth2:
   client:
-  #租户系统账号
+    #租户系统账号
     clientId: FOXCRM
     #租户系统密码
     clientSecret: ********
@@ -91,8 +92,6 @@ oauth2:
     scope: all
 ```
 
-
-
 #### 1.1.5 前端获取ram地址
 
 在这一步中，后端的主要目的是：给前端`授权服务器`重定向地址。
@@ -103,10 +102,10 @@ oauth2:
 
 ```java
     @ApiOperation("获取RAM授权登录地址")
-    @GetMapping("/oauth/url")
-    public ResponseResult<?> oauthRedirect(HttpServletRequest request,Boolean isMobile){
+@GetMapping("/oauth/url")
+public ResponseResult<?> oauthRedirect(HttpServletRequest request,Boolean isMobile){
         return authService.oauthRedirect(request,isMobile);
-    }
+        }
 ```
 
 后端处理代码可以这样子做：
@@ -115,12 +114,12 @@ oauth2:
 
 ```java
     public String getUrlToOauthCenter(Boolean isMobile){
-        if (isMobile==null || !isMobile){
-            return userLoginUri+"?response_type="+responseType+"&client_id="+clientId+"&redirect_uri="+redirectUri+"&scope="+scope+"&authorizationUri="+userAuthorizationUri;
-        }else {
-            return userLoginUri+"?response_type="+responseType+"&client_id="+clientId+"&redirect_uri="+redirectUriMobile+"&scope="+scope+"&authorizationUri="+userAuthorizationUri;
+        if(isMobile==null||!isMobile){
+        return userLoginUri+"?response_type="+responseType+"&client_id="+clientId+"&redirect_uri="+redirectUri+"&scope="+scope+"&authorizationUri="+userAuthorizationUri;
+        }else{
+        return userLoginUri+"?response_type="+responseType+"&client_id="+clientId+"&redirect_uri="+redirectUriMobile+"&scope="+scope+"&authorizationUri="+userAuthorizationUri;
         }
-    }
+        }
 ```
 
 #### 1.1.6 前端执行重定向
@@ -133,7 +132,8 @@ oauth2:
 
 #### 1.1.7 授权码回调
 
-如1.1.6所示，系统在跳转授权服务器并且成功登录后，系统期望重定向至`redirect_uri`变量下的目标URL，因此，当用户操作完成后，系统会重定向到：`https://crm.mynetworks.net/?code=5oUh90OcvUCAdTG3exLjNPobVFEChatDRtxJWYdb9xdGOHjtAvwURXL9UXmG`
+如1.1.6所示，系统在跳转授权服务器并且成功登录后，系统期望重定向至`redirect_uri`
+变量下的目标URL，因此，当用户操作完成后，系统会重定向到：`https://crm.mynetworks.net/?code=5oUh90OcvUCAdTG3exLjNPobVFEChatDRtxJWYdb9xdGOHjtAvwURXL9UXmG`
 
 其中，code变量后跟随的是授权码
 
@@ -157,7 +157,8 @@ oauth2:
 
 ### 1.2 租户侧注册登录流程
 
-> 在获取到用户信息后，证明该用户拥有在oauth2协议下理论登录能力。此时不仅仅是为用户执行登录那么简单，还应该`让用户在系统内执行登录操作`
+>
+在获取到用户信息后，证明该用户拥有在oauth2协议下理论登录能力。此时不仅仅是为用户执行登录那么简单，还应该`让用户在系统内执行登录操作`
 
 #### 1.2.1 用户信息比对
 
@@ -165,7 +166,8 @@ oauth2:
 
 用户已经注册的，通过已经注册的绑定账号进行登录。
 
-需要注意的是，`platfrom`字段会返回用户的登录平台，如果为`null`或`RAM`，则为通过授权服务器注册的账户。唯一的账号可以使用`电话号码`等。
+需要注意的是，`platfrom`字段会返回用户的登录平台，如果为`null`或`RAM`
+，则为通过授权服务器注册的账户。唯一的账号可以使用`电话号码`等。
 
 #### 1.2.2 自动注册
 
@@ -218,12 +220,12 @@ public class OauthUserQuickLoginAuthenticationToken extends AbstractAuthenticati
 
 ```java
 //        将用户手动重写到认证类内通过认证，写入安全上下文
-        OauthUserQuickLoginAuthenticationToken authenticationToken = new OauthUserQuickLoginAuthenticationToken(loginUser);
-        SecurityContextHolder.getContext().setAuthentication(authenticationToken);
+        OauthUserQuickLoginAuthenticationToken authenticationToken=new OauthUserQuickLoginAuthenticationToken(loginUser);
+                SecurityContextHolder.getContext().setAuthentication(authenticationToken);
 ```
 
 ##### 1.2.4.3 初始化用户
 
 > 在写入安全上下文以后，正常执行用户手动登录的后续操作即可，返回用户的权限路由、角色、权限等，同时为用户颁发token即可
 
-至此，锐狐授权服务器对接成功。
+至此，fox国产化授权服务器对接成功。
